; ModuleID = '/home/carl/AnghaBench/exploitdb/exploits/windows/dos/extr_21171.c_usage.c'
source_filename = "/home/carl/AnghaBench/exploitdb/exploits/windows/dos/extr_21171.c_usage.c"
target datalayout = "e-m:e-p270:32:32-p271:32:32-p272:64:64-i64:64-f80:128-n8:16:32:64-S128"
target triple = "x86_64-unknown-linux-gnu"

@.str = private unnamed_addr constant [22 x i8] c"\0AUse:  %s [options]\0A\0A\00", align 1
@.str.1 = private unnamed_addr constant [41 x i8] c"\09-s, --source*\09\09Source Address to Spoof\0A\00", align 1
@.str.2 = private unnamed_addr constant [51 x i8] c"\09-d, --destination*\09Destination Address to Attack\0A\00", align 1
@.str.3 = private unnamed_addr constant [51 x i8] c"\09-p, --port\09\09Destination Port to Attack\09(def: %d)\0A\00", align 1
@IPPORT_ISAKMP = common dso_local global i32 0, align 4
@.str.4 = private unnamed_addr constant [52 x i8] c"\09-n, --number\09\09Number of Packets to Send\09(def: %d)\0A\00", align 1
@SEND_MAX = common dso_local global i32 0, align 4
@.str.5 = private unnamed_addr constant [43 x i8] c"\09-l, --length\09\09Packets Length\09\09\09(def: %d)\0A\00", align 1
@ISAKMP_LEN = common dso_local global i32 0, align 4
@.str.6 = private unnamed_addr constant [35 x i8] c"\09-L, --loop\09\09Send Packets Forever\0A\00", align 1
@.str.7 = private unnamed_addr constant [33 x i8] c"\09-h, --help\09\09Show this Message\0A\0A\00", align 1
@.str.8 = private unnamed_addr constant [73 x i8] c"Copyrigth(c) 2001 Nelson Brito<nelson@SEKURE.ORG>. All rigths reserved.\0A\00", align 1

; Function Attrs: noinline nounwind optnone uwtable
define dso_local void @usage(i8* %0) #0 {
  %2 = alloca i8*, align 8
  store i8* %0, i8** %2, align 8
  %3 = load i8*, i8** %2, align 8
  %4 = call i32 (i8*, ...) @printf(i8* getelementptr inbounds ([22 x i8], [22 x i8]* @.str, i64 0, i64 0), i8* %3)
  %5 = call i32 (i8*, ...) @printf(i8* getelementptr inbounds ([41 x i8], [41 x i8]* @.str.1, i64 0, i64 0))
  %6 = call i32 (i8*, ...) @printf(i8* getelementptr inbounds ([51 x i8], [51 x i8]* @.str.2, i64 0, i64 0))
  %7 = load i32, i32* @IPPORT_ISAKMP, align 4
  %8 = call i32 (i8*, ...) @printf(i8* getelementptr inbounds ([51 x i8], [51 x i8]* @.str.3, i64 0, i64 0), i32 %7)
  %9 = load i32, i32* @SEND_MAX, align 4
  %10 = call i32 (i8*, ...) @printf(i8* getelementptr inbounds ([52 x i8], [52 x i8]* @.str.4, i64 0, i64 0), i32 %9)
  %11 = load i32, i32* @ISAKMP_LEN, align 4
  %12 = call i32 (i8*, ...) @printf(i8* getelementptr inbounds ([43 x i8], [43 x i8]* @.str.5, i64 0, i64 0), i32 %11)
  %13 = call i32 (i8*, ...) @printf(i8* getelementptr inbounds ([35 x i8], [35 x i8]* @.str.6, i64 0, i64 0))
  %14 = call i32 (i8*, ...) @printf(i8* getelementptr inbounds ([33 x i8], [33 x i8]* @.str.7, i64 0, i64 0))
  %15 = call i32 (i8*, ...) @printf(i8* getelementptr inbounds ([73 x i8], [73 x i8]* @.str.8, i64 0, i64 0))
  %16 = call i32 @exit(i32 0) #3
  unreachable
}

declare dso_local i32 @printf(i8*, ...) #1

; Function Attrs: noreturn
declare dso_local i32 @exit(i32) #2


!llvm.module.flags = !{!0}
!llvm.ident = !{!1}

!0 = !{i32 1, !"wchar_size", i32 4}
!1 = !{!"clang version 10.0.1 (https://github.com/wsmoses/llvm-project-tok c8e5003577614e72d6d18a216e6a09771e1fcce4)"}
